hyprland_confs/confs/iptables.rules
# Generated by iptables-save v1.8.11 on Tue Apr 29 19:04:41 2025
*filter
:INPUT DROP [1:36]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [13477:1191721]
:TCP - [0:0]
:UDP - [0:0]
:fw-interfaces - [0:0]
:fw-open - [0:0]
-A INPUT -p tcp -m tcp --dport 443 -j LOG
-A INPUT -p tcp -m tcp --dport 8443 -j LOG
-A INPUT -p tcp -m tcp --dport 80 -j LOG
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8443 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j TCP
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable
-A INPUT -p tcp -j REJECT --reject-with tcp-reset
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -j fw-interfaces
-A FORWARD -j fw-open
-A FORWARD -j REJECT --reject-with icmp-host-unreachable
-A UDP -p udp -m udp --dport 9930 -j ACCEPT
COMMIT
# Completed on Tue Apr 29 19:04:41 2025
# Generated by iptables-save v1.8.11 on Tue Apr 29 19:04:41 2025
*nat
:PREROUTING ACCEPT [27:8242]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [56:3494]
:POSTROUTING ACCEPT [56:3494]
COMMIT
# Completed on Tue Apr 29 19:04:41 2025
